[package]
name = "dsbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "2.2.2"
async-trait = "0.1.75"
bytes = "1.5.0"
chrono = "0.4.31"
dslab-mp = { git = "https://github.com/osukhoroslov/dslab", version = "0.1.0" }
dyn-clone = "1.0.16"
prost = "0.12.3"
protoc = "2.28.0"
serde = "1.0.193"
serde_json = "1.0.108"
serial_test = "2.0.0"
sugars = "3.0.1"
timer = "0.2.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tokio-timer = "0.2.13"
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"

[lib]
name = "dsbuild"
path = "src/lib.rs"

[[bin]]
name = "pinger"
path = "bin/pinger.rs"

[[bin]]
name = "ponger"
path = "bin/ponger.rs"
