[package]
name = "dsbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0" }
async-trait = "0.1.75"
bytes = "1.5.0"
chrono = "0.4.31"
dslab-async-mp = { git = "https://github.com/egnees/dslab", branch = "async-mp" }
dyn-clone = "1.0.16"
env_logger = "0.10.1"
io = { version = "0.0.2" }
log = "0.4.20"
prost = "0.12.3"
protoc = "2.28.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
serde = "1.0.193"
serde_json = "1.0.108"
sugars = "3.0.1"
timer = "0.2.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tokio-timer = "0.2.13"
tokio-util = "0.7.10"
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"

[lib]
name = "dsbuild"
path = "src/lib.rs"

[workspace]
members = ["examples/*", "."]
