[package]
name = "chat-example"
version = "0.1.0"
edition = "2021"

[dependencies]
dsbuild = { path = "../../" }
log = "0.4.14"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
sugars = "3.0.0"
tokio = { version = "1.36.0" }
async-std = "1.12.0"
colored = "2.1.0"
chrono = "0.4.35"
rand = "0.8.5"
serde_json = "1.0.116"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"

[lib]
name = "chat"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "client"
path = "bin/client.rs"
