[package]
name = "ping-pong"
version = "0.1.0"
edition = "2021"

[dependencies]
dsbuild = { path = "../../" }
dsbuild_macros = { path = "../../dsbuild-macros" }
dsbuild_message = { path = "../../dsbuild-message" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

[lib]
name = "pingpong"
path = "src/lib.rs"

[[bin]]
name = "run-ping-pong-real"
path = "real/run.rs"
