[package]
name = "raft"
version = "0.1.0"
edition = "2021"

[dependencies]
dsbuild = { path = "../../" }
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"]}
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["sync"]}

[lib]
name = "raft"
path = "src/lib.rs"

[[bin]]
name = "sim"
path = "sim/run.rs"