[package]
name = "raft"
version = "0.1.0"
edition = "2021"

[dependencies]
dsbuild = { path = "../../" }
env_logger = "0.11.5"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["server", "http1"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["sync", "net"] }
url = "2.5.4"

[lib]
name = "raft"
path = "src/lib.rs"

[[bin]]
name = "run-raft-sim"
path = "sim/run.rs"

[[bin]]
name = "run-raft-real"
path = "real/run.rs"
